--- a/basics2.ipynb
+++ b/basics2.ipynb
@@ -201,9 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Doing', 'going', 'staying', 'sleeping']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import re\n",
     "s = \"Doing things, going home, staying awake, sleeping later\"\n",
@@ -222,9 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['23', '-24', '-1']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "re.findall(r'[+-]?\\d+', \"23 + -24 = -1\")"
    ]
@@ -242,9 +264,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I’m not in a hurry, then I should stay. On the other hand, if I leave']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = (\"If I’m not in a hurry, then I should stay. \" +\n",
     "    \"On the other hand, if I leave, then I can sleep.\")\n",
@@ -499,9 +532,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\xc3\\xa4'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"ä\".encode(\"utf-8\")"
    ]
@@ -515,9 +559,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[195, 164]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(\"ä\".encode(\"utf-8\"))              # Show as a list of integers"
    ]
@@ -546,9 +601,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 0: {\n",
+      "Line 1:  \"cells\": [\n",
+      "Line 2:   {\n",
+      "Line 3:    \"cell_type\": \"markdown\",\n",
+      "Line 4:    \"metadata\": {},\n"
+     ]
+    }
+   ],
    "source": [
     "f = open(\"basics.ipynb\", \"r\") # Let's open this notebook file, \n",
     "                              # which is essentially a text file.\n",
@@ -569,9 +636,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 0: {\n",
+      "Line 1:  \"cells\": [\n",
+      "Line 2:   {\n",
+      "Line 3:    \"cell_type\": \"markdown\",\n",
+      "Line 4:    \"metadata\": {},\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"basics.ipynb\", \"r\") as f:          # the file will be automatically closed,\n",
     "                                              # when the with block exits\n",
@@ -589,9 +668,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The longest line in this file has length 1046\n"
+     ]
+    }
+   ],
    "source": [
     "max_len = 0\n",
     "with open(\"basics.ipynb\", \"r\") as f:\n",
@@ -618,9 +705,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Got a negative integer.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import random\n",
@@ -1047,7 +1142,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing B.f\n",
+      "Executing C.g\n"
+     ]
+    }
+   ],
    "source": [
     "class B(object):\n",
     "    def f(self):\n",
@@ -1300,7 +1404,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index does not exist\n"
+     ]
+    }
+   ],
    "source": [
     "L=[1,2,3]\n",
     "try:\n",
@@ -1313,7 +1425,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Give a number (non-number quits): 3\n",
+      "Give a number (non-number quits): x\n",
+      "Average is 3.0\n"
+     ]
+    }
+   ],
    "source": [
     "def compute_average(L):\n",
     "    n=len(L)\n",
@@ -1585,7 +1707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
