Removed unnecessary urls

--- a/pandas2.ipynb
+++ b/pandas2.ipynb
@@ -312,7 +312,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 3 (municipal information)</div>\n",
     "\n",
-    "In the `main` function load a data set of municipal information from the src folder (https://www.cs.helsinki.fi/u/jttoivon/dap/data/statistics/municipal.tsv originally from [Statistics Finland](https://pxnet2.stat.fi/PXWeb/pxweb/en/)). Use the function `pd.read_csv`, and note that the separator is a tabulator.\n",
+    "In the `main` function load a data set of municipal information from the src folder (originally from [Statistics Finland](https://pxnet2.stat.fi/PXWeb/pxweb/en/)). Use the function `pd.read_csv`, and note that the separator is a tabulator.\n",
     "\n",
     "Print the shape of the DataFrame and the column names in the following format:\n",
     "```\n",
@@ -564,7 +564,7 @@
     "\n",
     "Write function `subsetting_by_positions` that does the following.\n",
     "\n",
-    "Read the data set of the top forty singles from the beginning of the year 1964 from the `src` folder (`https://www.cs.helsinki.fi/u/jttoivon/dap/data/UK-top40-1964-1-2.tsv`). Return the top 10 entries and only the columns `Title` and `Artist`. Get these elements by their positions, that is, by using a single call to the `iloc` attribute. The function should return these as a DataFrame.\n",
+    "Read the data set of the top forty singles from the beginning of the year 1964 from the `src` folder. Return the top 10 entries and only the columns `Title` and `Artist`. Get these elements by their positions, that is, by using a single call to the `iloc` attribute. The function should return these as a DataFrame.\n",
     "\n",
     "<hr/>"
    ]
@@ -619,7 +619,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 9 (snow depth)</div>\n",
     "\n",
-    "Write function `snow_depth` that reads in the weather DataFrame from the `src` folder (`https://www.cs.helsinki.fi/u/jttoivon/dap/data/fmi/kumpula-weather-2017.csv`) and returns the maximum amount of snow in the year 2017.\n",
+    "Write function `snow_depth` that reads in the weather DataFrame from the `src` folder and returns the maximum amount of snow in the year 2017.\n",
     "\n",
     "Print the result in the `main` function in the following form:\n",
     "```\n",
@@ -827,7 +827,7 @@
     "\n",
     "Write function `cyclists` that does the following.\n",
     "\n",
-    "Load the Helsinki bicycle data set from the `src` folder (address `https://www.cs.helsinki.fi/u/jttoivon/dap/data/hel/Helsingin_pyorailijamaarat.csv`). The dataset contain number of cyclists passing by measuring points per hour. The data is gathered over about four years, and there are 20 measuring points around Helsinki. The dataset contains some empty rows at the end. Get rid of these. Also, get rid of columns that contain only missing values. Return the cleaned dataset. \n",
+    "Load the Helsinki bicycle data set from the `src` folder (https://hri.fi/data/dataset//helsingin-pyorailijamaarat). The dataset contain number of cyclists passing by measuring points per hour. The data is gathered over about four years, and there are 20 measuring points around Helsinki. The dataset contains some empty rows at the end. Get rid of these. Also, get rid of columns that contain only missing values. Return the cleaned dataset. \n",
     "\n",
     "<hr/>"
    ]
@@ -860,7 +860,7 @@
     "\n",
     "Write function `special_missing_values` that does the following.\n",
     "\n",
-    "Read the data set of the top forty singles from the beginning of the year 1964 from the `src` folder (`https://www.cs.helsinki.fi/u/jttoivon/dap/data/UK-top40-1964-1-2.tsv`). Return the rows whose singles' position dropped compared to last week's position (column LW=Last Week).\n",
+    "Read the data set of the top forty singles from the beginning of the year 1964 from the `src` folder. Return the rows whose singles' position dropped compared to last week's position (column LW=Last Week).\n",
     "\n",
     "To do this you first have to convert the special values \"New\" and \"Re\" (Re-entry) to missing values (`None`).\n",
     "\n",
@@ -960,7 +960,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 16 (split date)</div>\n",
     "\n",
-    "Read again the bicycle data set from `https://www.cs.helsinki.fi/u/jttoivon/dap/data/hel/Helsingin_pyorailijamaarat.csv`,\n",
+    "Read again the bicycle data set from `src` folder,\n",
     "and clean it as in the earlier exercise. Then split the `Päivämäärä` column into a DataFrame with five columns with column names `Weekday`, `Day`, `Month`, `Year`, and `Hour`. Note that you also need to to do some conversions. To get Hours, drop the colon and minutes. Convert field `Weekday` according the following rule:\n",
     "```\n",
     "ma -> Mon\n",
@@ -1061,7 +1061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
