--- a/pandas3.ipynb
+++ b/pandas3.ipynb
@@ -438,7 +438,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 3 (top bands)</div>\n",
     "\n",
-    "Merge the DataFrames UK top40 and the bands DataFrame that are downloaded in the `src` folder.\n",
+    "Merge the DataFrames UK top40 and the bands DataFrame that are stored in the `src` folder.\n",
     "\n",
     "<hr/>"
    ]
@@ -679,10 +679,11 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 4 (cyclists per day)</div>\n",
     "\n",
-    "Read, clean and parse the bicycle data set as usual. Group the rows by year, month, and day. Get the sum for each group.\n",
+    "\n",
     "\n",
     "Part 1.\n",
     "\n",
+    "Read, clean and parse the bicycle data set as usual. Group the rows by year, month, and day. Get the sum for each group.\n",
     "Make function `cyclists_per_day` that does the above. The function should return a DataFrame.\n",
     "\n",
     "Part 2.\n",
@@ -698,7 +699,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 5 (best record company)</div>\n",
     "\n",
-    "We use again the UK top 40 data set from the first week of 1964 in the `src` folder. Here we define \"goodness\" of a record company (`Publisher`) based on the sum of the weeks of chart (WoC) of its singles. Return a DataFrame of the singles by the best record company (a subset of rows of the original DataFrame). Do this with function `best_record_company`.\n",
+    "We use again the UK top 40 data set from the first week of 1964 in the `src` folder. Here we define \"goodness\" of a record company (`Publisher`) based on the sum of the weeks on chart (WoC) of its singles. Return a DataFrame of the singles by the best record company (a subset of rows of the original DataFrame). Do this with function `best_record_company`.\n",
     "\n",
     "<hr/>"
    ]
@@ -725,7 +726,7 @@
     "Copy the function `suicide fractions` from the previous exercise. \n",
     "\n",
     "Implement function `suicide_weather` as described below.\n",
-    "Download the dataset of average temperature (over years 1961-1990) in different countries from `src/List_of_countries_by_average_yearly_temperature.html` (https://en.wikipedia.org/wiki/List_of_countries_by_average_yearly_temperature) .\n",
+    "We use the dataset of average temperature (over years 1961-1990) in different countries from `src/List_of_countries_by_average_yearly_temperature.html` (https://en.wikipedia.org/wiki/List_of_countries_by_average_yearly_temperature) .\n",
     "You can use the function `pd.read_html` to get all the tables from a html page. By default `pd.read_html` does not know which row contains column headers and which column contains row headers. Maku sure you use the country as the (row) index for both of the DataFrames. What is the [Spearman correlation](https://en.wikipedia.org/wiki/Spearman%27s_rank_correlation_coefficient) between these variables? Use the `corr` method of Series object. Note the the two Series need not be sorted as the indices of the rows (country names) are used to align them.\n",
     "\n",
     "The return value of the function `suicide_weather` is a tuple (suicide_rows, temperature_rows, common_rows, spearman_correlation)\n",
@@ -747,7 +748,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s=\"\\u22125\"\n",
+    "s=\"\\u2212\" \"5\"   # unicode minus sign and five\n",
     "print(s)\n",
     "try:\n",
     "    float(s)\n",
@@ -978,7 +979,7 @@
     "\n",
     "* reads the data set\n",
     "* cleans it\n",
-    "* turns its `Päivämäärä` column into (row) DatetimeIndex (that is, to row names)\n",
+    "* turns its `Päivämäärä` column into (row) DatetimeIndex (that is, to row names) of that DataFrame\n",
     "* returns the new DataFrame\n",
     "\n",
     "<hr/>"
@@ -996,7 +997,7 @@
     "\n",
     "In the `main` function plot the DataFrame. Xticklabels should be the weekdays. Don't forget to call `show` function!\n",
     "\n",
-    "If you want the xticklabels to be `['Mon', 'Tue', 'Wed', 'Thu', 'Fr', 'Sat', 'Sun']` instead of numbers, then it may get a bit messy. There seems to be a problem with non-numeric `x` values. You could try the following after plotting, but you don't have to:\n",
+    "If you want the xticklabels to be `['Mon', 'Tue', 'Wed', 'Thu', 'Fr', 'Sat', 'Sun']` instead of numbers (1,..,7), then it may get a bit messy. There seems to be a problem with non-numeric `x` values. You could try the following after plotting, but you don't have to:\n",
     "\n",
     "```python\n",
     "weekdays=\"x mon tue wed thu fri sat sun\".title().split()\n",
@@ -1052,7 +1053,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
