--- a/pandas2.ipynb
+++ b/pandas2.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If either `columns` or `index` argument is left out, then an integer index will be used:"
+    "If either `columns` or `index` argument is left out, then an implicit integer index will be used:"
    ]
   },
   {
@@ -827,7 +827,7 @@
     "\n",
     "Write function `cyclists` that does the following.\n",
     "\n",
-    "Load the Helsinki bicycle data set from the `src` folder (https://hri.fi/data/dataset//helsingin-pyorailijamaarat). The dataset contain number of cyclists passing by measuring points per hour. The data is gathered over about four years, and there are 20 measuring points around Helsinki. The dataset contains some empty rows at the end. Get rid of these. Also, get rid of columns that contain only missing values. Return the cleaned dataset. \n",
+    "Load the Helsinki bicycle data set from the `src` folder (https://hri.fi/data/dataset//helsingin-pyorailijamaarat). The dataset contains the number of cyclists passing by measuring points per hour. The data is gathered over about four years, and there are 20 measuring points around Helsinki. The dataset contains some empty rows at the end. Get rid of these. Also, get rid of columns that contain only missing values. Return the cleaned dataset. \n",
     "\n",
     "<hr/>"
    ]
@@ -1027,7 +1027,7 @@
     "     * Out of columns\n",
     "* You know how to access rows, columns and individual elements of DataFrames\n",
     "* You can use the `describe` method to get a quick overview of a DataFrame\n",
-    "* You now how missing values are represented in Series and DataFrames, and you know how to manipulate them\n",
+    "* You know how missing values are represented in Series and DataFrames, and you know how to manipulate them\n",
     "* There are similarities between Python's string methods and the vectorized forms of string operations in Series and DataFrames\n",
     "* You can do complicated text processing with the `str.replace` method combined with regular expressions\n",
     "* The powerful `where` method is the vectorized form of Python's `if-else` construct\n",
