--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -260,6 +260,8 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 10 (linear regression)</div>\n",
     "\n",
+    "This exercise can give two points at maximum!\n",
+    "\n",
     "Part 1.\n",
     "\n",
     "Write a function `fit_line` that gets one dimensional arrays `x` and `y` as parameters. The function should return the tuple `(slope, intercept)` of the fitted line. Write a main program that tests the `fit_line` function with some example arrays. The main function should produce output in the following form:\n",
@@ -301,6 +303,9 @@
    "metadata": {},
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 12 (coefficient of determination)</div>\n",
+    "\n",
+    "This exercise can give two points at maximum!\n",
+    "\n",
     "Using the same data as in the previous exercise, instead of printing the regression coefficients, print the *coefficient of determination*. The coefficient of determination, denoted by R2, tells how well the linear regression fits the data. The maximum value of the coefficient of determination is 1. That means the best possible fit.\n",
     "\n",
     "Part 1.\n",
