--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -96,12 +96,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(x,y, 'o')\n",
     "model=LinearRegression(fit_intercept=True)\n",
     "model.fit(x[:,np.newaxis], y)\n",
     "xfit=np.linspace(0,10,100)\n",
     "yfit=model.predict(xfit[:, np.newaxis])\n",
-    "plt.plot(xfit,yfit)\n",
+    "plt.plot(xfit,yfit, color=\"black\")\n",
+    "plt.plot(x,y, 'o')\n",
     "# The following will draw as many line segments as there are columns in matrices x and y\n",
     "plt.plot(np.vstack([x,x]), np.vstack([y, model.predict(x[:, np.newaxis])]), color=\"red\");"
    ]
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The linear regression tries to minimize the sum of squared errors $\\sum_i (y[i] - \\hat{y}[i])^2$; this is the sum of the lengths of the red line segments in the above plot. The estimated values $\\hat{y}[i]$ are denoted by `yfit[i]` in the above code."
+    "The linear regression tries to minimize the sum of squared errors $\\sum_i (y[i] - \\hat{y}[i])^2$; this is the sum of the squared lengths of the red line segments in the above plot. The estimated values $\\hat{y}[i]$ are denoted by `yfit[i]` in the above code."
    ]
   },
   {
