Tuned machine learning notebooks

--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -66,7 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
    ]
   },
@@ -186,6 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import accuracy_score\n",
     "y_fitted = model.predict(X)\n",
     "acc=accuracy_score(y,y_fitted)\n",
     "print(\"Accuracy score is\", acc)"
@@ -468,6 +471,8 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 3 (word classification)</div>\n",
     "\n",
+    "This exercise can give four points at maximum!\n",
+    "\n",
     "Part 1.\n",
     "\n",
     "Write function `get_features` that gets a one dimensional np.array, containing words, as parameter. It should return a feature matrix of shape (n, 29), where n is the number of elements of the input array. There should be one feature for each of the letters in the following alphabet: \"abcdefghijklmnopqrstuvwxyzäö-\".\n",
@@ -505,11 +510,11 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 4 (spam detection)</div>\n",
     "\n",
-    "In the src folder there are two files: ham.txt.gz and spam.txt.gz. The files are preprocessed versions of the files from https://spamassassin.apache.org/old/publiccorpus/. There is one email per line. The file ham.txt.gz contains emails that are non-spam, and, conversely, emails in file spam.txt are spam. The email headers have been removed, except for the subject line, and non-ascii characters have been deleted.\n",
+    "In the `src` folder there are two files: `ham.txt.gz` and `spam.txt.gz`. The files are preprocessed versions of the files from https://spamassassin.apache.org/old/publiccorpus/. There is one email per line. The file `ham.txt.gz` contains emails that are non-spam, and, conversely, emails in file `spam.txt` are spam. The email headers have been removed, except for the subject line, and non-ascii characters have been deleted.\n",
     "\n",
     "Write function `spam_detection` that does the following:\n",
     "\n",
-    "* reads these files. Use function open from gzip module, since the files are compressed.\n",
+    "* reads these files. Use function `open` from `gzip` module, since the files are compressed.\n",
     "* forms the combined feature matrix using `CountVectorizer` class' `fit_transform` method.\n",
     "* use labels 0 for ham and 1 for spam\n",
     "* divide that feature matrix and the target label into training and test sets, using `train_test_split`. Use 75% of the data for training\n",
@@ -552,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
