--- a/pandas3.ipynb
+++ b/pandas3.ipynb
@@ -406,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All combinations with matching keys (`Name`) are created:"
+    "All combinations with matching keys (`Title`) are created:"
    ]
   },
   {
