--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -514,10 +514,10 @@
     "\n",
     "Write function `spam_detection` that does the following:\n",
     "\n",
-    "* reads these files. Use function `open` from `gzip` module, since the files are compressed.\n",
+    "* reads these files. Use function `open` from `gzip` module, since the files are compressed. From each file take only `fraction` of reads from the start of the file, where `fraction` is a parameter to `spam_detection`, and should be in the range `[0.0, 1.0]`.\n",
     "* forms the combined feature matrix using `CountVectorizer` class' `fit_transform` method.\n",
     "* use labels 0 for ham and 1 for spam\n",
-    "* divide that feature matrix and the target label into training and test sets, using `train_test_split`. Use 75% of the data for training\n",
+    "* divide that feature matrix and the target label into training and test sets, using `train_test_split`. Use 75% of the data for training. Pass the random_state parameter from `spam_detection` to `train_test_split`.\n",
     "* train a `MultinomialNB` model, and use it to predict the labels for the test set\n",
     "\n",
     "The function should return a triple consisting of\n",
@@ -526,7 +526,7 @@
     "* size of test sample\n",
     "* number of misclassified sample points\n",
     "\n",
-    "Pass the function's random_state parameter to function `train_test_split`.\n",
+    "Note. The tests use the `fraction` parameter with value 0.1 to ease to load on the TMC server. If full data were used and the solution did something non-optimal, it could use huge amounts of memory, causing the solution to fail.\n",
     "<hr/>"
    ]
   },
