Small clarification to ex 6-3

--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -475,7 +475,7 @@
     "\n",
     "Part 1.\n",
     "\n",
-    "Write function `get_features` that gets a one dimensional np.array, containing words, as parameter. It should return a feature matrix of shape (n, 29), where n is the number of elements of the input array. There should be one feature for each of the letters in the following alphabet: \"abcdefghijklmnopqrstuvwxyzäö-\".\n",
+    "Write function `get_features` that gets a one dimensional np.array, containing words, as parameter. It should return a feature matrix of shape (n, 29), where n is the number of elements of the input array. There should be one feature for each of the letters in the following alphabet: \"abcdefghijklmnopqrstuvwxyzäö-\". The values should be the number of times the corresponding character appears in the word.\n",
     "\n",
     "Part 2.\n",
     "\n",
